All local changes updated on rempte repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.daimokenya.tic_tac_toe"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -30,31 +30,20 @@ android {
             initWith debug
             applicationIdSuffix ".debugStaging"
         }
-//        sourceSets{
-//            // Encapsulates configurations for the debug source set.
-//            debug{
-//                // Changes the directory for Java sources.
-//
-////                java.srcDirs = ['debug/java']
-//
-//                // If you list multiple directories, Gradle uses all of them to collect
-//                // sources. Because Gradle gives these directories equal priority, if
-//                // you define the same resource in more than one directory, you get an
-//                // error when merging resources.
-//
-////                res.srcDirs = ['debug/res1']
-//
-////                manifest.srcFile 'main/AndroidManifest.xml'
-//            }
-//        }
+
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
